--- a/SegurosEquinoccial.Pymes.Web/ClientApp/src/app/gerente/reporte/reporte.component.html
+++ b/SegurosEquinoccial.Pymes.Web/ClientApp/src/app/gerente/reporte/reporte.component.html
@@ -195,8 +195,14 @@
                   </div>
                 </div>
                 <div class="row">
-                  <canvas style="margin-top: 15px;" id="canvasCotizaciones"
+                  <div class="col-md-12">
+                    <canvas style="margin-top: 15px;" id="canvasCotizaciones"
                     height="100">{{ chartReporteBarCotizaciones }}</canvas>
+                  </div> 
+                  <div class="col-md-12">
+                    <canvas style="margin-top: 15px;" id="canvasCotizacionesPastel"
+                    height="100">{{ chartReportePieCotizaciones }}</canvas>
+                  </div>                        
                 </div>
               </div>
             </div>
@@ -255,8 +261,14 @@
                   </div>
                 </div>
                 <div class="row">
-                  <canvas style="margin-top: 15px;" id="canvasEmisiones"
+                  <div class="col-md-12">
+                    <canvas style="margin-top: 15px;" id="canvasEmisiones"
                     height="100">{{ chartReporteBarEmisiones }}</canvas>
+                  </div>
+                  <div class="col-md-12">
+                    <canvas style="margin-top: 15px;" id="canvasEmisionesPastel"
+                    height="100">{{ chartReportePieEmisiones }}</canvas>
+                  </div>                    
                 </div>
               </div>
             </div>
